Fixed: Input and select are way too big.

--- a/themes/Skyline/style.css
+++ b/themes/Skyline/style.css
@@ -90,7 +90,7 @@ label {
 }
 
 input {
-    padding: 5px 10px;
+    padding: 2px 4px;
     background: linear-gradient(#fff, #d4d4d4);
     border: 1px solid #808080;
     border-radius: 3px;
@@ -109,7 +109,7 @@ input:focus {
 }
 
 select {
-    padding: 5px 10px;
+    padding: 2px 4px;
     background: linear-gradient(#fff, #d4d4d4);
     border: 1px solid #808080;
     border-radius: 3px;
